--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -45,7 +45,7 @@ layout: default
       <h2>
         <a href="{{ '/news/' | relative_url }}" style="color: inherit">news</a>
       </h2>
-      {% include news.liquid limit=false %}
+      {% include news.liquid limit=10 %}
     {% endif %}
 
     <!-- Latest posts -->
